i118798 - Fix Pyuno dead-lock

Fixes fdo#57569, thanks to Miklós Prisznyák for the hint.

git-svn-id: https://svn-master.apache.org/repos/asf/incubator/ooo/trunk@1232123 13f79535-47bb-0310-9956-ffa450edef68
(cherry picked from commit 374c9af20d93029d999ca21beb2b989e0a428b98)

Signed-off-by: Michael Stahl <mstahl@redhat.com>